fix alignment

--- a/forgetPassword/forgetPasswordPage.css
+++ b/forgetPassword/forgetPasswordPage.css
@@ -26,7 +26,6 @@ body{
     color:var(--clr-300) ;
     display: grid;
     place-content: center;
-
     transform: scale(var(--scale-factor));
     transform-origin: top center;
 }
@@ -91,6 +90,8 @@ body{
 
 
 .welcome{
+    display:flex;
+    align-items: center;
     background-color: rgba(255, 247, 237, 1);
     padding: 2rem 4rem 4rem;
     box-shadow: 0 0 1rem rgb(188, 168, 168);
